# filey-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  prepare.sh
src/: file_operations.rs  file_types.rs  filey.rs  lib.rs  macros.rs  permissions.rs  test.rs  unit_of_information.rs  units.rs
test/: test_symlink.txt
