[package]
name = "filey"
version = "0.1.0"
authors = ["p1486 xzstd099@protonmail.com"]
description = "A collection of utilities to make file operations more convenient."
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["std", "backtrace"] }
path-absolutize = "3.1.1"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"

[lib]
doctest = false
